[FEAT] Add getHistoricalPrices, getHighestPrice, getLowestPrice and getLatestPriceChange #12